// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalDialog /> type \`confirm\` should match snapshot 1`] = `
<div
  className="react-modal-mock"
>
  <pre
    className="props"
  >
    {
  "isOpen": true,
  "style": {
    "overlay": {
      "backgroundColor": ""
    }
  },
  "className": "rmb-modal ",
  "shouldCloseOnOverlayClick": true,
  "closeTimeoutMS": 300,
  "contentLabel": "",
  "ariaHideApp": false
}
  </pre>
  <div
    className="TransitionGroup-mock"
  >
    <pre
      className="props"
    >
      {}
    </pre>
    <div
      className="CSSTransition-mock"
    >
      <pre
        className="props"
      >
        {
  "appear": true,
  "timeout": 300,
  "classNames": "rmb-modal-show",
  "mountOnEnter": true,
  "unmountOnExit": true
}
      </pre>
      <div
        className="rmb-modal-content"
      >
        <button
          className="rmb-close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <div
          className="rmb-modal-header"
        >
          <h3
            className="rmb-modal-title"
          >
            Confirm title
          </h3>
        </div>
        <div>
          <div
            className="rmb-modal-body"
          >
            Confirm body
          </div>
          <div
            className="rmb-modal-footer"
          >
            <button
              className="rmb-btn rmb-btn-primary rmb-btn-ok"
              onClick={[Function]}
              type="button"
            >
              Ok
            </button>
            <button
              className="rmb-btn rmb-btn-default rmb-btn-cancel"
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ModalDialog /> type \`custom\` should match snapshot 1`] = `
<div
  className="react-modal-mock"
>
  <pre
    className="props"
  >
    {
  "isOpen": true,
  "style": {
    "overlay": {
      "backgroundColor": ""
    }
  },
  "className": "rmb-modal ",
  "shouldCloseOnOverlayClick": true,
  "closeTimeoutMS": 300,
  "contentLabel": "",
  "ariaHideApp": false
}
  </pre>
  <div
    className="TransitionGroup-mock"
  >
    <pre
      className="props"
    >
      {}
    </pre>
    <div
      className="CSSTransition-mock"
    >
      <pre
        className="props"
      >
        {
  "appear": true,
  "timeout": 300,
  "classNames": "rmb-modal-show",
  "mountOnEnter": true,
  "unmountOnExit": true
}
      </pre>
      <div
        className="rmb-modal-content"
      >
        <button
          className="rmb-close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <div
          className="rmb-modal-header"
        >
          <h3
            className="rmb-modal-title"
          >
            Custom title
          </h3>
        </div>
        <div
          className="rmb-modal-custom-body"
        >
          <div
            className="custom-body"
          >
            <div
              className="props-for-custom-component"
            >
              {
  "closeModal": "function closeModal(){...}"
}
            </div>
            <button
              className="btn-close"
              onClick={[Function]}
              type="button"
            >
              Close Modal
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ModalDialog /> type \`error\` should match snapshot 1`] = `
<div
  className="react-modal-mock"
>
  <pre
    className="props"
  >
    {
  "isOpen": true,
  "style": {
    "overlay": {
      "backgroundColor": "transparent",
      "pointerEvents": "none",
      "zIndex": 1080
    }
  },
  "className": "rmb-modal rmb-modal-error ",
  "shouldCloseOnOverlayClick": true,
  "closeTimeoutMS": 300,
  "contentLabel": "",
  "ariaHideApp": false
}
  </pre>
  <div
    className="TransitionGroup-mock"
  >
    <pre
      className="props"
    >
      {}
    </pre>
    <div
      className="CSSTransition-mock"
    >
      <pre
        className="props"
      >
        {
  "appear": true,
  "timeout": 300,
  "classNames": "rmb-modal-show",
  "mountOnEnter": true,
  "unmountOnExit": true
}
      </pre>
      <div
        className="rmb-modal-content"
      >
        <button
          className="rmb-close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <div
          className="rmb-modal-header"
        >
          <h3
            className="rmb-modal-title"
          >
            Error title
          </h3>
        </div>
        <div>
          <div
            className="rmb-modal-body"
          >
            Error body
          </div>
          <div
            className="rmb-modal-footer"
          >
            <button
              className="rmb-btn rmb-btn-primary rmb-btn-ok"
              onClick={[Function]}
              type="button"
            >
              Ok
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ModalDialog /> type \`info\` should match snapshot 1`] = `
<div
  className="react-modal-mock"
>
  <pre
    className="props"
  >
    {
  "isOpen": true,
  "style": {
    "overlay": {
      "backgroundColor": "transparent",
      "pointerEvents": "none",
      "zIndex": 1080
    }
  },
  "className": "rmb-modal rmb-modal-info ",
  "shouldCloseOnOverlayClick": true,
  "closeTimeoutMS": 300,
  "contentLabel": "",
  "ariaHideApp": false
}
  </pre>
  <div
    className="TransitionGroup-mock"
  >
    <pre
      className="props"
    >
      {}
    </pre>
    <div
      className="CSSTransition-mock"
    >
      <pre
        className="props"
      >
        {
  "appear": true,
  "timeout": 300,
  "classNames": "rmb-modal-show",
  "mountOnEnter": true,
  "unmountOnExit": true
}
      </pre>
      <div
        className="rmb-modal-content"
      >
        <button
          className="rmb-close"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <div
          className="rmb-modal-header"
        >
          <h3
            className="rmb-modal-title"
          >
            Info title
          </h3>
        </div>
        <div>
          <div
            className="rmb-modal-body"
          >
            Info body
          </div>
          <div
            className="rmb-modal-footer"
          >
            <button
              className="rmb-btn rmb-btn-primary rmb-btn-ok"
              onClick={[Function]}
              type="button"
            >
              Ok
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
